--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,16 @@
   font-family: 'Inter', sans-serif;
 }
 
+#dark-bg {
+  width: 200vw;
+  height: 100vh;
+  background-color: var(--Very-dark-blue);
+  position: fixed;
+  opacity: .6;
+  top: 0;
+  left: 0;
+}
+
 body {
   padding: 6rem;
 }
@@ -24,6 +34,16 @@ img {
 
 a {
   text-decoration: none;
+}
+
+i.bi-list {
+  font-size: 2rem;
+  color: var(--Dark-grayish-blue);
+  cursor: pointer;
+}
+
+.inactive {
+  display: none !important;
 }
 
 #side-content a:hover,
@@ -42,6 +62,42 @@ button {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
+}
+
+#offset-menu {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  right: 0;
+  min-width: 60%;
+  padding: 1rem;
+  height: 100vh;
+  background-color: var(--Off-white);
+  z-index: 2;
+  animation-duration: 300ms;
+}
+
+#offset-links {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0;
+}
+
+#offset-menu i {
+  width: fit-content;
+  align-self: flex-end;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#offset-links a {
+  color: var(--Very-dark-blue);
+}
+
+#offset-links a:hover {
+  color: var(--orange);
+  transition: 300ms;
 }
 
 #nav-links {
@@ -187,6 +243,26 @@ p#last {
   height: 120px;
 }
 
+@keyframes offset {
+  0% {
+    right: -100%;
+  }
+
+  100% {
+    right: 0;
+  }
+}
+
+@keyframes offsetClose {
+  0% {
+    right: 0;
+  }
+
+  100% {
+    right: -100%;
+  }
+}
+
 @media only screen and (max-width: 1312px) and (min-width: 1031px) {
   #main-image-text h1 {
     font-size: 2.6rem;
@@ -214,6 +290,10 @@ p#last {
 }
 
 @media only screen and (max-width: 734px) {
+  #nav-logo img {
+    width: 80%;
+  }
+
   #nav-links {
     display: none;
   }
